# quadruped-robot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
config/: robot_params.yaml
mcp_server/: requirements.txt  server.py
scripts/: cloud_setup.sh  convert_to_usd.sh  generate_urdf.py  isaac_urdf_convert.py  play_rl.py  render_robot_preview.py  train_rl.py  watch_rl.py
src/kinematics/: leg.py
src/ros2/quadruped_description/: package.xml  setup.cfg  setup.py
src/ros2/quadruped_description/launch/: display.launch.py
src/ros2/quadruped_description/rviz/: display.rviz
src/ros2/quadruped_description/urdf/: quadruped.urdf
src/simulation/isaac_lab/: __init__.py  chase_camera.py  quadruped_env_cfg.py  reward_shaping_wrapper.py  rsl_rl_adapter.py
src/simulation/isaac_lab/agents/: rsl_rl_ppo_cfg.py
src/simulation/isaac_lab/mdp/: __init__.py  rewards.py
tests/unit/: test_kinematics.py
